--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist/ && webpack --colors"
+    "start": "rimraf dist/ && webpack --mode production"
   },
   "author": "Sean Larkin",
   "license": "MIT",
   "devDependencies": {
+    "browserslist": "^4.0.0",
     "rimraf": "^2.5.4",
-    "webpack": "^2.2.0",
-    "webpack-merge": "^0.14.1"
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "last 2 versions",
+    "not IE 11",
+    "not dead",
+    "> 5%"
+  ]
 }
